# datasaude-scripts

./: .env.local  .gitignore  enviroment.yaml  install_deps_uv.sh  pyproject.toml  requirements.txt
R/: 05 IDW Cnpq.R  06 IDW Cnpq.R  contorno_sha.shp  conversão_tif_to_png.py  geolocalizacao_estacoes_lat_long.xlsx  interpolated_idw.tif
R/transform_img/: contorno.qmd  imagem_com_contorno.tif  pyproject.toml
R/transform_img/transform_img/: 2022-01-01 O3 (Ozônio) .tif  Ozônio.tif  Ozônio.tif.aux.xml  Ozônio_epsg29193.tif  contorno.geojson  contorno.py  contorno_29193.geojson  contorno_poligono.py  contorno_simple.py  converter_tif_to_png.py  imagem_com_contorno_v2_ok.tif  imagem_com_contorno_v3.tif  krigagem.py  mapa_interpolation.tif.aux.xml  mapa_mp10.tif  mapa_mp10.tif.aux.xml  mp10_discreto_sem_transparencia.tif  mp10_discreto_sem_transparencia.tif.aux.xml  obtem_cor_pixel.py
analise/: naive.py
boto3/: gestor_arquivos.py
boto3-client/: enviar_arquivos_massa.py  gestor_arquivos.py
config/: enviroment.py
contorno/: hexgrid_v2.shx
core/: __init__.py  database.py  database_mysql.py  database_sqlite.py  log_config.py  models.py  models_sqlite.py  poluente_repository.py
csv_to_sql/: codigo_estacao.html  main.py  main_poluente_historico_csv_to_sql.py  paciente_csv_to_sql.py  poluente_escala.py  poluente_historico_csv_temp_to_sql.py  poluente_historico_csv_to_sql.py
geolocalizacao/: estacao_address.py  estacoes.csv  main.py
ibge_mongo/: __init__.py  checkpoint.py  common.py  csv_utils.py  import_setores_alfabetizacao_br.py  import_setores_basico_br.py  import_setores_cor_ou_raca_br.py  (+15 more)
(+48 files in other folders)
