[tool.poetry]
name = "datasaude-script"
version = "0.1.0"
description = ""
authors = ["Cauê Beloni <cbeloni@gmail.com>"]
readme = "README.md"
packages = [{include = "csv_to_sql"}]

[tool.poetry.dependencies]
python = "^3.11"
mysql-connector-python = "^8.0.33"
pandas = "^2.0.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
geopy = "^2.3.0"
boto3 = "^1.28.37"
faker = "^19.3.1"
pyinterpolate = "^0.5.0.post1"
rasterio = "^1.3.8"
pyshp = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "csv_to_sql.main:run"