[tool.poetry]
name = "transform-img"
version = "0.1.0"
description = ""
authors = ["Cauê Beloni <cbeloni@gmail.com>"]
readme = "README.md"
packages = [{include = "transform_img"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"
geopandas = "^0.13.2"
rasterio = "^1.3.8"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
